--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,22 @@
 .App {
-  text-align: center;
+    text-align: center;
+    font-size: 35px;
+    margin-top: 15%;
 }
 
-.App-logo {
-  height: 40vmin;
+.App-title {
+    font-size: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Clock-days, .Clock-hours, .Clock-minutes, .Clock-seconds {
+    display: inline;
+    margin: 10px;
+    
 }
 
-.App-link {
-  color: #09d3ac;
+.Deadline-input {
+    font-size: 25px;
+    margin: 30px;
 }
+
+
